<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!-- MAP /////////////////////////////////////////////////////////////////////////////////// -->
    <!--fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:layout="@layout/activity_maps" /-->
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_menuButton"
        android:layout_width="@dimen/menu_button"
        android:layout_height="@dimen/menu_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="29dp"
        android:clickable="true"
        android:contentDescription="@string/menu"
        android:focusable="true"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@drawable/ic_baseline_menu_24"
        app:tint="@android:color/white"
        app:backgroundTint="@color/primary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/search"
        android:focusable="true"
        android:src="@drawable/ic_baseline_search_24"
        app:tint="@android:color/white"
        app:backgroundTint="@color/primary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/baseline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="23dp"
        android:clickable="true"
        android:contentDescription="@string/locations"
        android:focusable="true"
        android:src="@drawable/ic_baseline_place_24"
        app:tint="@android:color/white"
        app:backgroundTint="@color/primary" />
</RelativeLayout>

